main/default/objects/Rating_Modifier_Template__c/Rating_Modifier_Template__c.object-meta.xml
<CustomObject>
    <label>Rating Modifier Template</label>
    <nameField>
        <label>Rating Modifier Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rating Modifier Templates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>