main/default/objects/Rating_Modifier_Template__c/fields/Controlling_Picklist_Label__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Picklist_Label__c</fullName>
    <label>Controlling Picklist Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>