main/default/objects/Rating_Modifier_Template__c/fields/Coverage_Code__c.field-meta.xml
<CustomField>
    <fullName>Coverage_Code__c</fullName>
    <label>Coverage Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>