main/default/objects/Rating_Modifier_Template__c/fields/Create_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Create_Criteria__c</fullName>
    <label>Create Criteria</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accountants</fullName>
            </value>
            <value>
                <fullName>Architects</fullName>
            </value>
            <value>
                <fullName>Design &amp; Construct</fullName>
            </value>
            <value>
                <fullName>Engineers</fullName>
            </value>
            <value>
                <fullName>Insurance Brokers</fullName>
            </value>
            <value>
                <fullName>IT Consultants</fullName>
            </value>
            <value>
                <fullName>Media Professionals</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Property Professionals</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>