main/default/objects/Rating_Modifier_Template__c/fields/Dependent_Picklist_Label__c.field-meta.xml
<CustomField>
    <fullName>Dependent_Picklist_Label__c</fullName>
    <label>Dependent Picklist Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>