main/default/objects/Rating_Modifier_Template__c/fields/Display_Format__c.field-meta.xml
<CustomField>
    <fullName>Display_Format__c</fullName>
    <label>Display Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Factor Values Only</fullName>
            </value>
            <value>
                <fullName>Secondary Modifiers</fullName>
            </value>
            <value>
                <fullName>Primary Modifiers</fullName>
            </value>
            <value>
                <fullName>Eligibility</fullName>
            </value>
            <value>
                <fullName>Pros and Cons</fullName>
            </value>
            <value>
                <fullName>Default Only</fullName>
            </value>
            <value>
                <fullName>Primary Clearance PCC</fullName>
            </value>
            <value>
                <fullName>Clearance</fullName>
            </value>
            <value>
                <fullName>Modifier and Factor Values</fullName>
                <isActive>false</isActive>
                <label>Modifier and Factor Values</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>