main/default/objects/Rating_Modifier_Template__c/fields/Eligibility_Weighting_Factor__c.field-meta.xml
<CustomField>
    <fullName>Eligibility_Weighting_Factor__c</fullName>
    <label>Eligibility Weighting Factor</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>