main/default/objects/Rating_Modifier_Template__c/fields/Modifier_Product__c.field-meta.xml
<CustomField>
    <fullName>Modifier_Product__c</fullName>
    <label>Modifier Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>D&amp;O</fullName>
            </value>
            <value>
                <fullName>Fiduciary</fullName>
            </value>
            <value>
                <fullName>MPL</fullName>
            </value>
            <value>
                <fullName>Crime</fullName>
            </value>
            <value>
                <fullName>Cyber</fullName>
            </value>
            <value>
                <fullName>Cyber Standalone</fullName>
            </value>
            <value>
                <fullName>MPL Standalone</fullName>
            </value>
            <value>
                <fullName>Private Company Combo</fullName>
            </value>
            <value>
                <fullName>EPL</fullName>
            </value>
            <value>
                <fullName>Professional Indemnity</fullName>
            </value>
            <value>
                <fullName>D&amp;O Standalone</fullName>
                <isActive>false</isActive>
                <label>D&amp;O Standalone</label>
            </value>
            <value>
                <fullName>Test Product 00</fullName>
                <isActive>false</isActive>
                <label>Test Product 00</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>