main/default/objects/Rating_Modifier_Template__c/fields/Object_API_Name_of_Picklist__c.field-meta.xml
<CustomField>
    <fullName>Object_API_Name_of_Picklist__c</fullName>
    <description>Will be used for lighting-record-edit-form implementation for Dependent picklist solution</description>
    <label>Object API Name of Picklist</label>
    <length>255</length>
    <type>Text</type>
</CustomField>