main/default/objects/Rating_Modifier_Template__c/fields/Page_Section__c.field-meta.xml
<CustomField>
    <fullName>Page_Section__c</fullName>
    <label>Page Section</label>
    <length>255</length>
    <type>Text</type>
</CustomField>