main/default/objects/Rating_Modifier_Template__c/fields/Picklist_Default_Value__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Default_Value__c</fullName>
    <label>Picklist Default Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>