main/default/objects/Rating_Modifier_Template__c/fields/Picklist_Range__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Range__c</fullName>
    <label>Picklist Range</label>
    <type>TextArea</type>
</CustomField>