main/default/objects/Rating_Modifier_Template__c/fields/Picklist_Values__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Values__c</fullName>
    <label>Option Values</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>