main/default/objects/Rating_Modifier_Template__c/fields/Rating__c.field-meta.xml
<CustomField>
    <fullName>Rating__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Rating</label>
    <type>Checkbox</type>
</CustomField>