main/default/objects/Rating_Modifier_Template__c/fields/Rating_Modifier_Code__c.field-meta.xml
<CustomField>
    <fullName>Rating_Modifier_Code__c</fullName>
    <externalId>true</externalId>
    <label>Rating Modifier Code</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>