main/default/objects/Rating_Modifier_Template__c/fields/Rating_Reference_Name__c.field-meta.xml
<CustomField>
    <fullName>Rating_Reference_Name__c</fullName>
    <externalId>true</externalId>
    <label>Rating Reference Name</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>