main/default/objects/Rating_Modifier_Template__c/fields/Service_Classification__c.field-meta.xml
<CustomField>
    <fullName>Service_Classification__c</fullName>
    <label>Service Classification</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Service_Classification</valueSetName>
    </valueSet>
</CustomField>