main/default/objects/Rating_Modifier_Template__c/fields/SME_Question__c.field-meta.xml
<CustomField>
    <fullName>SME_Question__c</fullName>
    <label>SME Question</label>
    <length>255</length>
    <type>Text</type>
</CustomField>