main/default/objects/Rating_Modifier_Template__c/fields/Submission_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Submission_Field_API_Name__c</fullName>
    <description>The field linked to this rating modifier value on Submission object.</description>
    <inlineHelpText>The field linked to this rating modifier value on Submission object.</inlineHelpText>
    <label>Submission Update API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>