main/default/objects/Rating_Modifier_Template__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Modifier_Format__c</columns>
    <columns>Product__c</columns>
    <columns>Rating_Modifier_Code__c</columns>
    <columns>Page_Section__c</columns>
    <columns>Sub_Section__c</columns>
    <columns>Display_Format__c</columns>
    <columns>Picklist_Values__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Profile_Name_for_Read_Only__c</columns>
    <columns>Is_Required__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>