main/default/objects/Rating_Modifier_Template__c/listViews/Eligibility_Templates.listView-meta.xml
<ListView>
    <fullName>Eligibility_Templates</fullName>
    <columns>NAME</columns>
    <columns>Modifier_Product__c</columns>
    <columns>Modifier_Format__c</columns>
    <columns>Picklist_Values__c</columns>
    <columns>Eligibility_Weighting_Factor__c</columns>
    <columns>Page_Section__c</columns>
    <columns>Sub_Section__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Display_Format__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Page_Section__c</field>
        <operation>contains</operation>
        <value>Eligibility</value>
    </filters>
    <label>Eligibility Templates</label>
</ListView>