main/default/objects/Rating_Modifier_Template__c/listViews/Pro_and_Con_for_Cyber.listView-meta.xml
<ListView>
    <fullName>Pro_and_Con_for_Cyber</fullName>
    <columns>NAME</columns>
    <columns>Page_Section__c</columns>
    <columns>Sub_Section__c</columns>
    <columns>Sort_Order__c</columns>
    <columns>Sort_Sub_Section__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Page_Section__c</field>
        <operation>equals</operation>
        <value>Pros and Cons</value>
    </filters>
    <label>Pro and Con for Cyber</label>
</ListView>